@@ -558,9 +558,9 @@ case "${PVM_ARCH}" in
 	    rhea* ) export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}\:/sw/redhat6/udunits/2.1.24/rhel6.4_intel13.1.3/lib ; ;; # endif ORNL
 	esac # endcase ${HOST}
 	if [ -n "${MPI_ROOT}" ]; then
-		LD_LIBRARY_PATH=${LD_LIBRARY_PATH}\:${MPI_ROOT}/lib # OpenMPI
-		PATH=${PATH}\:/usr/local/parallel/bin # OpenMPI
-		MANPATH=${MANPATH}\:/usr/local/parallel/man
+	    LD_LIBRARY_PATH=${LD_LIBRARY_PATH}\:${MPI_ROOT}/lib # OpenMPI
+	    PATH=${PATH}\:/usr/local/parallel/bin # OpenMPI
+	    MANPATH=${MANPATH}\:/usr/local/parallel/man
 	fi # endif MPI_ROOT
 
 # HTTP proxy at LGGE needed for googleearth
