@@ -5039,7 +5039,7 @@ sudo dnf install curl-devel libxml2-devel -y # DAP-prereqs
 sudo dnf install libdap libdap-devel -y # DAP
 sudo dnf install bison flex gcc gcc-c++ -y # GNU toolchain
 sudo dnf install gsl gsl-devel -y # GSL
-sudo dnf install netcdf netcdf-devel netcdf-fortran -y # netCDF
+sudo dnf install netcdf netcdf-devel netcdf-fortran netcdf-fortran-devel -y # netCDF
 sudo dnf install netcdf-perl -y # netCDF for htrn2nc.pl netcdf-perl only on Fedora, worked 20181001
 sudo dnf install librx librx-devel -y # RX
 sudo dnf install texinfo-tex # TeXInfo, makeinfo
