@@ -1,3 +1,7 @@
+2019-07-10  Charlie Zender  <zender@uci.edu>
+
+	* Add wvn_rgl grid-type to generate wavelength grids that are regularly spaced in wavenumber
+
 2019-07-09  Charlie Zender  <zender@uci.edu>
 
 	* Consolidate warnings for spc_bbd_cls::eval()
